# agentic-curator

./: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  check_redis.py  claude.md  docker-compose.yml  find_perfect_numbers.py  memory_cache.md  pyproject.toml  requirements.txt
docs/: getting-credentials.md  mcp-servers.md  memory-system.md
scripts/: test_memory_e2e.py  test_thread_polling.py
src/agentic_curator/: __init__.py  __main__.py  agent.py  auth.py  memory.py  poller.py  slack_client.py
src/redis/: claude_agent.py  docker-compose.yml  memory.py  redis_client.py  requirements.txt
tests/: __init__.py  conftest.py  test_auth.py  test_full_kanban_workflow.py  test_mcp_integration.py  test_memory.py  test_memory_redis.py  test_memory_workflow.py  test_poller.py  test_redis_mcp.py  test_slack_client.py  test_slack_kanban_trigger.py
